# pfl

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE.md  README.md
.github/workflows/: release.yml
src/: commands.rs  extensions.rs  lib.rs  main.rs  search_format.rs
tests/: extensions_test.rs
