[package]
name = "pfl"
version = "0.1.0"
edition = "2024"
authors = ["Adam Burucs"]
description = "Photography file lister"
license = "Source Available"
repository = "https://github.com/krondorl/pfl"
homepage = "https://github.com/krondorl/pfl"
readme = "README.md"
keywords = ["photography", "files", "file-lister", "raw-files", "compressed-files"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["derive"] }
ctrlc = "3.5.1"
indicatif = "0.18.3"
rayon = "1.11.0"
walkdir = "2.5.0"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce parallel code generation units for better optimization
panic = "abort"     # Abort on panic instead of unwinding
strip = true        # Strip symbols from binary
